# sdlc-demo

./: .env.example  .gitignore  CLAUDE.md  LEARNINGS.md  pyproject.toml
docs/: idea.md  prd.md  stories.md  testing.md
docs/adr/: 0001-stack.md
docs/plans/: s1-onboarding.md
src/sdlc_demo/: config.py  copy.py  main.py  onboarding.py  repo.py  twilio_client.py  webhook.py
supabase/migrations/: 0001_students.sql
tests/: test_copy.py  test_health.py  test_onboarding_state_machine.py  test_twilio_signature.py  test_webhook.py  test_webhook_integration.py
