[project]
name = "sdlc-demo"
version = "0.1.0"
description = "AI tutor for Mexican secundaria entrance exam prep — v1 WhatsApp bot scaffold"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "twilio>=9",
    "supabase>=2",
    "pydantic-settings>=2",
    "python-dateutil>=2.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "respx>=0.21",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdlc_demo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
